# Integrator

figure/: figure.pptx  figure.vsdx  各种桥模块.vsdx
matlab_code/DAB/: DAB.slx  DAB_SIMULINK.slx  hcc_sm_v6_circuit.slx
matlab_code/Ex10_1_MMC_Np_4/: Ex10_1_MMC_Np_4.m  ModularMultiLevelConverter.slx  ModularMultiLevelConverter.slxc  Parameters_MMC_Np4.mat  test.m
matlab_code/Ex10_1_MMC_Np_4/other_tool/: Analytic_Solution_LTI.m  CheckConvergence_SDC.m  GetOutputs_MultiStep.m  GetOutputs_SDC.m  GetOutputs_SingleStep.m  GetSignalChange.m  Get_error_norm.m  Update_Jac_pwl_output.m  build_mex_Collocation.m  build_mex_FE.m  build_mex_GMRES_SDC.m  build_mex_TR.m  detectAndInterpolate_MultiStep.m  detectAndInterpolate_SDC.m  detectAndInterpolate_SingleStep.m
matlab_code/Ex_AC_System/: A.csv  B.csv  Ex_AC_System.m  TransmissionLine_AC_System.slx  gemras_sdc和jfnk对比.xlsx  inputs.txt  jfnk_yall.mat  y_all_output.csv  y_all_output.xlsx
matlab_code/GSS/: main.mlx
matlab_code/HCC02S_SM_006Valve120F_V6/: HCC02S_SM_006Valve120F_V6.bakx  HCC02S_SM_006Valve120F_V6.pscx  HCC02S_SM_006Valve120F_V6.psmx  I-V.xlsx  hcc_sm_v6_circuit.slx  hcc_sm_v6_circuit2.slx  hcc_sm_v6_circuit2.slxc
matlab_code/test/: test.cpp  test.mexw64  test_Main.m  untitled.slx  untitled.slxc
python_code/JFNK-integrator-master/: y_all_output.csv
python_code/JFNK-integrator-master/source/: CMakeLists.txt  analysis.py  integrator.cpp  integrator.h  integrator.py  integrator_copy.cpp  integrator_copy_copy.py  integrator_liner.cpp  integrator_liner.h  main.py  main_copy.py  main_test.cpp  main_test.py  matplotlibcpp.h  my_globals.py  plotter.py  plotter_copy.py  points.cpp  points.h  points.py  points_copy.py  preprocess.cpp  preprocess.h  preprocess.py  test.cpp  test.py
(+321 files in other folders)
